--- a/Style/Stylings/style.css
+++ b/Style/Stylings/style.css
@@ -9,7 +9,7 @@
 }
 body {
   height: 100vh;
-  overflow: hidden;
+  width: 100vw;
 }
 br {
   display: block;
@@ -151,7 +151,7 @@ main {
 
 .hamburger svg {
   height: 3em;
-z-index: 1000;
+  z-index: 1000;
   transition: transform 600ms cubic-bezier(0.4, 0, 0.2, 1);
   margin-left: 2rem;
   display: none;
@@ -209,6 +209,14 @@ z-index: 1000;
   font-size: 1.15rem;
   opacity: 1;
 }
+@media only screen and (max-width: 300px) {
+.extra-content{
+  flex-wrap: wrap;
+}
+.time{
+  margin: 0.35rem 0.25rem;
+}
+}
 
 @media only screen and (max-width: 400px) {
   .name {
@@ -234,6 +242,9 @@ z-index: 1000;
   }
   .aside-img {
     display: none;
+  }
+  .written-text{
+    width: 100%;
   }
 }
 @media only screen and (max-width: 800px) {
