--- a/Style/Stylings/fitness.css
+++ b/Style/Stylings/fitness.css
@@ -284,6 +284,7 @@ li::marker{
 * {
   scrollbar-width: thin;
   scrollbar-color: #000000 #ffffff;
+  border-radius: 100px;
 }
 
 *::-webkit-scrollbar {
@@ -292,6 +293,7 @@ li::marker{
 
 *::-webkit-scrollbar-track {
   background: #ffffff;
+  border-radius: 100px;
 }
 
 *::-webkit-scrollbar-thumb {
@@ -299,6 +301,7 @@ li::marker{
   border-radius: 100px;
  
 }
+
 
 @media only screen and (max-width: 400px) {
   .name {
