--- a/Style/Stylings/nutrition.css
+++ b/Style/Stylings/nutrition.css
@@ -284,6 +284,27 @@ li::marker {
   font-size: 1.15rem;
   opacity: 1;
 }
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #000000 #ffffff;
+  border-radius: 100px;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 100px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 100px;
+ 
+}
+
 @media only screen and (max-width: 400px) {
   .name {
     text-wrap: wrap;
