--- a/Style/Stylings/style.css
+++ b/Style/Stylings/style.css
@@ -14,6 +14,26 @@ body {
 br {
   display: block;
 }
+* {
+  scrollbar-width: thin;
+  scrollbar-color: #000000 #ffffff;
+  border-radius: 100px;
+}
+
+*::-webkit-scrollbar {
+  width: 10px;
+}
+
+*::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 100px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 100px;
+ 
+}
 
 header {
   padding: 0.5rem;
