--- a/Style/Stylings/fitness.css
+++ b/Style/Stylings/fitness.css
@@ -51,7 +51,12 @@ a:hover {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
-
+label {
+  margin-right: 3rem;
+  font-weight: 600;
+  font-size: 1.25rem;
+  letter-spacing: -0.027rem;
+}
 .custom-select-container {
   display: flex;
   justify-content: center;
@@ -60,9 +65,7 @@ a:hover {
 }
 
 .custom-select {
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
+ 
   font-size: 100%;
   padding: 0.8em;
   outline: none;
@@ -95,7 +98,7 @@ button {
 
 button:hover {
   box-shadow: 0 0 10px #ae00ff, 0 0 25px #001eff, 0 0 50px #ae00ff;
-  transition-delay: 0.6s;
+  transition-delay: 0.1s;
 }
 
 button span {
@@ -281,31 +284,28 @@ li::marker{
   font-size: 1.25rem;
 }
 
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #000000 #ffffff;
-  border-radius: 100px;
-}
+
 
 *::-webkit-scrollbar {
-  width: 10px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #ffffff;
-  border-radius: 100px;
+  width: 0.35rem;
+ margin-right: 0.25rem;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #000000;
-  border-radius: 100px;
- 
+  border-radius: 2.5rem;
+  background: -webkit-gradient(linear,left top,left bottom,from(#cd23fc),to(#a609ca));
+  box-shadow: inset 2px 2px 2px rgba(255,255,255,.25), inset -2px -2px 2px rgba(0,0,0,.25);
 }
 
-
-@media only screen and (max-width: 400px) {
+*::-webkit-scrollbar-track {
+  background-color: #fff;
+  border-radius: 10px;
+  background: linear-gradient(to right,#201c29,#201c29 1px,#100e17 1px,#100e17);
+}
+@media only screen and (max-width: 430px) {
   .name {
     text-wrap: wrap;
+    padding-left: 1rem;
   }
   header {
     width: 70%;
@@ -330,6 +330,20 @@ li::marker{
   .cards{
     width: 80%;
     margin-left: 0.5rem;
+  }
+  label{
+    margin-right: 0.05rem;
+    margin-left: 2rem;
+    font-size: 1.25rem;
+  }
+  .input{
+    margin-right: 0.25rem;
+  }
+  button{
+    margin-right: 1.5rem;
+  }
+  .hamburger{
+    margin-right: 2rem;
   }
 }
 @media only screen and (max-width: 800px) {
@@ -358,6 +372,7 @@ li::marker{
     backdrop-filter: blur(10px);
     border: 2px solid white;
     z-index: 1000;
+    height: 2em;
   }
   a {
     opacity: 0;
