--- a/Style/Stylings/nutrition.css
+++ b/Style/Stylings/nutrition.css
@@ -10,7 +10,12 @@
 body {
   height: 100vh;
 }
-
+label {
+  margin-right: 3rem;
+  font-weight: 600;
+  font-size: 1.25rem;
+  letter-spacing: -0.027rem;
+}
 header {
   padding: 0.5rem;
   display: flex;
@@ -96,7 +101,7 @@ button {
 
 button:hover {
   box-shadow: 0 0 10px #ae00ff, 0 0 25px #001eff, 0 0 50px #ae00ff;
-  transition-delay: 0.6s;
+  transition-delay: 0.1s;
 }
 
 button span {
@@ -357,7 +362,7 @@ li::marker {
   padding-top: 0.25rem;
   }
 }
-@media only screen and (max-width: 800px) {
+@media only screen and (max-width: 950px) {
   .hamburger {
     position: fixed;
     top: 1rem;
@@ -383,6 +388,7 @@ li::marker {
     backdrop-filter: blur(10px);
     border: 2px solid white;
     z-index: 1000;
+    height: 2em;
   }
  .name{
   width: 33rem;
@@ -400,6 +406,18 @@ li::marker {
   }
   .info{
     margin: 2rem 1rem;
+  }
+  label{
+    margin-left: 1rem;
+    margin-right: 0;
+  }
+  .input{
+    width: 7rem;
+    margin-left: 0;
+
+  }
+  button{
+    margin-left: 2rem;
   }
 }
 @media only screen and (max-width: 1000px) {
