--- a/Style/Stylings/fitness.css
+++ b/Style/Stylings/fitness.css
@@ -345,6 +345,10 @@ li::marker{
   .hamburger{
     margin-right: 2rem;
   }
+  .name{
+    font-size: 2.25rem;
+  padding-top: 0.25rem;
+  }
 }
 @media only screen and (max-width: 800px) {
   .hamburger {
