--- a/Style/Stylings/fitness.css
+++ b/Style/Stylings/fitness.css
@@ -9,6 +9,10 @@
 }
 body {
   height: 100vh;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 header {
@@ -75,7 +79,7 @@ label {
   margin-right: 1rem;
 }
 
-button {
+.button {
   height: 3.7rem;
   position: relative;
   padding: 1em 1em;
@@ -95,16 +99,16 @@ button {
   align-self: center;
 }
 
-button:hover {
+.button:hover {
   box-shadow: 0 0 10px #ae00ff, 0 0 25px #001eff, 0 0 50px #ae00ff;
   transition-delay: 0.1s;
 }
 
-button span {
+.button span {
   position: absolute;
 }
 
-button span:nth-child(1) {
+.button span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
@@ -112,12 +116,12 @@ button span:nth-child(1) {
   background: linear-gradient(90deg, transparent, #ae00ff);
 }
 
-button:hover span:nth-child(1) {
+.button:hover span:nth-child(1) {
   left: 100%;
   transition: 0.7s;
 }
 
-button span:nth-child(3) {
+.button span:nth-child(3) {
   bottom: 0;
   right: -100%;
   width: 100%;
@@ -125,13 +129,13 @@ button span:nth-child(3) {
   background: linear-gradient(90deg, transparent, #001eff);
 }
 
-button:hover span:nth-child(3) {
+.button:hover span:nth-child(3) {
   right: 100%;
   transition: 0.7s;
   transition-delay: 0.35s;
 }
 
-button span:nth-child(2) {
+.button span:nth-child(2) {
   top: -100%;
   right: 0;
   width: 2px;
@@ -139,7 +143,7 @@ button span:nth-child(2) {
   background: linear-gradient(180deg, transparent, #ae00ff);
 }
 
-button:hover span:nth-child(2) {
+.button:hover span:nth-child(2) {
   top: 100%;
   transition: 0.7s;
   transition-delay: 0.17s;
@@ -153,13 +157,13 @@ button span:nth-child(4) {
   background: linear-gradient(360deg, transparent, #001eff);
 }
 
-button:hover span:nth-child(4) {
+.button:hover span:nth-child(4) {
   bottom: 100%;
   transition: 0.7s;
   transition-delay: 0.52s;
 }
 
-button:active {
+.button:active {
   background: #ae00af;
   background: linear-gradient(to top right, #ae00af, #001eff);
   color: #bfbfbf;
@@ -167,7 +171,7 @@ button:active {
   transition: 0.1s;
 }
 
-button:active
+.button:active
   span:nth-child(1)
   span:nth-child(2)
   span:nth-child(2)
@@ -333,13 +337,14 @@ li::marker {
   .extra-content {
     flex-wrap: wrap;
   }
-  button {
+  .button {
     margin: 0;
   }
 
   .cards {
-    width: 80%;
+    width: 75%;
     margin-left: 0.5rem;
+    margin-right: 0.5rem;
   }
   label {
     margin-right: 0.05rem;
@@ -349,7 +354,7 @@ li::marker {
   .input {
     margin-right: 0.25rem;
   }
-  button {
+  .button {
     margin-right: 1.5rem;
   }
   .hamburger {
@@ -404,4 +409,15 @@ li::marker {
 }
 .name {
   cursor: pointer;
+}
+#scrollToTopBtn{
+  position: absolute;
+  right: 0;
+  margin-right: 2.5rem;
+  border-radius: 50%;
+  height: 4rem;
+  width: 4rem;
+ color: white;
+ border: 2px solid white;
+ font-size: 2rem;
 }
