--- a/Style/Stylings/nutrition.css
+++ b/Style/Stylings/nutrition.css
@@ -9,6 +9,10 @@
 }
 body {
   height: 100vh;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 label {
   margin-right: 3rem;
@@ -77,7 +81,8 @@ a:hover {
 .inputGroup :is(input:focus, input:valid) {
   border-color: rgb(37, 37, 211);
 }
-button {
+
+.custom-button {
   height: 3.7rem;
   position: relative;
   padding: 1em 1em;
@@ -97,16 +102,16 @@ button {
   align-self: center;
 }
 
-button:hover {
+.custom-button:hover {
   box-shadow: 0 0 10px #ae00ff, 0 0 25px #001eff, 0 0 50px #ae00ff;
   transition-delay: 0.1s;
 }
 
-button span {
+.custom-button span {
   position: absolute;
 }
 
-button span:nth-child(1) {
+.custom-button span:nth-child(1) {
   top: 0;
   left: -100%;
   width: 100%;
@@ -114,12 +119,12 @@ button span:nth-child(1) {
   background: linear-gradient(90deg, transparent, #ae00ff);
 }
 
-button:hover span:nth-child(1) {
+.custom-button:hover span:nth-child(1) {
   left: 100%;
   transition: 0.7s;
 }
 
-button span:nth-child(3) {
+.custom-button span:nth-child(3) {
   bottom: 0;
   right: -100%;
   width: 100%;
@@ -127,13 +132,13 @@ button span:nth-child(3) {
   background: linear-gradient(90deg, transparent, #001eff);
 }
 
-button:hover span:nth-child(3) {
+.custom-button:hover span:nth-child(3) {
   right: 100%;
   transition: 0.7s;
   transition-delay: 0.35s;
 }
 
-button span:nth-child(2) {
+.custom-button span:nth-child(2) {
   top: -100%;
   right: 0;
   width: 2px;
@@ -141,13 +146,13 @@ button span:nth-child(2) {
   background: linear-gradient(180deg, transparent, #ae00ff);
 }
 
-button:hover span:nth-child(2) {
+.custom-button:hover span:nth-child(2) {
   top: 100%;
   transition: 0.7s;
   transition-delay: 0.17s;
 }
 
-button span:nth-child(4) {
+.custom-button span:nth-child(4) {
   bottom: -100%;
   left: 0;
   width: 2px;
@@ -155,13 +160,13 @@ button span:nth-child(4) {
   background: linear-gradient(360deg, transparent, #001eff);
 }
 
-button:hover span:nth-child(4) {
+.custom-button:hover span:nth-child(4) {
   bottom: 100%;
   transition: 0.7s;
   transition-delay: 0.52s;
 }
 
-button:active {
+.custom-button:active {
   background: #ae00af;
   background: linear-gradient(to top right, #ae00af, #001eff);
   color: #bfbfbf;
@@ -169,7 +174,7 @@ button:active {
   transition: 0.1s;
 }
 
-button:active
+.custom-button:active
   span:nth-child(1)
   span:nth-child(2)
   span:nth-child(2)
@@ -331,8 +336,11 @@ li::marker {
     margin-left: 0.5rem;
     margin-right: 0;
   }
-  button {
+  .custom-button {
     margin-left: 3rem;
+  }
+  #scrollToTopBtn{
+    display: inline;
   }
 }
 @media only screen and (max-width: 600px) {
@@ -356,6 +364,9 @@ li::marker {
   .name {
     font-size: 2.25rem;
     padding-top: 0.25rem;
+  }
+  .custom-button {
+    margin-left: 3rem;
   }
 }
 @media only screen and (max-width: 950px) {
@@ -411,7 +422,7 @@ li::marker {
     width: 7rem;
     margin-left: 0;
   }
-  button {
+  .custom-button {
     margin-left: 2rem;
   }
 }
@@ -425,4 +436,16 @@ li::marker {
 }
 .name {
   cursor: pointer;
+}
+#scrollToTopBtn{
+  position: absolute;
+  right: 0;
+  margin-right: 2.5rem;
+  border-radius: 50%;
+  height: 4rem;
+  width: 4rem;
+ color: white;
+ border: 2px solid white;
+ font-size: 2rem;
+ display: none;
 }
