--- a/Style/Stylings/fitness.css
+++ b/Style/Stylings/fitness.css
@@ -418,6 +418,9 @@ li::marker {
   height: 4rem;
   width: 4rem;
  color: white;
- border: 2px solid white;
+ border: 2px solid #1f1d2b;
  font-size: 2rem;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
