--- a/Style/Stylings/nutrition.css
+++ b/Style/Stylings/nutrition.css
@@ -445,7 +445,9 @@ li::marker {
   height: 4rem;
   width: 4rem;
  color: white;
- border: 2px solid white;
+ border: 2px solid #1f1d2b;
  font-size: 2rem;
- display: none;
+ display: flex;
+ justify-content: center;
+ align-items: center;
 }
