--- a/Style/Stylings/style.css
+++ b/Style/Stylings/style.css
@@ -18,24 +18,34 @@ body {
 br {
   display: block;
 }
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #000000 #ffffff;
-  border-radius: 100px;
-}
-
 *::-webkit-scrollbar {
-  width: 10px;
-}
-
-*::-webkit-scrollbar-track {
-  background: #ffffff;
-  border-radius: 100px;
+  width: 0.35rem;
+  margin-right: 0.25rem;
 }
 
 *::-webkit-scrollbar-thumb {
-  background-color: #000000;
-  border-radius: 100px;
+  border-radius: 50rem;
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(#cd23fc),
+    to(#a609ca)
+  );
+  box-shadow: inset 2px 2px 2px rgba(255, 255, 255, 0.25),
+    inset -2px -2px 2px rgba(0, 0, 0, 0.25);
+}
+
+*::-webkit-scrollbar-track {
+  background-color: #fff;
+  border-radius: 50rem;
+  background: linear-gradient(
+    to right,
+    #201c29,
+    #201c29 1px,
+    #100e17 1px,
+    #100e17
+  );
 }
 
 header {
@@ -261,12 +271,6 @@ main {
     text-wrap: wrap;
   }
 
-  main {
-    display: grid;
-    grid-template-columns: 2fr 1fr;
-    grid-column-gap: 0px;
-    grid-row-gap: 0px;
-  }
   .extra-content {
     display: grid;
     grid-template-rows: 1fr 1fr;
@@ -275,6 +279,9 @@ main {
   }
   .written-text {
     width: 100%;
+  }
+  .aside-img{
+    display: none;
   }
 }
 @media only screen and (max-width: 950px) {
