--- a/Style/Stylings/style.css
+++ b/Style/Stylings/style.css
@@ -14,7 +14,7 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
-  
+  overflow-x: hidden;
 }
 br {
   display: block;
@@ -315,6 +315,9 @@ main {
 
   a {
     opacity: 0;
+  }
+  .aside-img{
+    display: none;
   }
 }
 .name {
