--- a/Style/Stylings/style.css
+++ b/Style/Stylings/style.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Permanent+Marker&display=swap');
 * {
   font-family: "Poppins", sans-serif;
   background-color: #191626;
@@ -159,6 +159,7 @@ main {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 2rem;
+  
 }
 .written-text {
   grid-column: 1;
